--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,11 +1,14 @@
 version: 0.2
+env:
+  secrets_manager:
+   KATALON_API_KEY: /CodeBuild/KATALON_API_KEY
 phases:
   pre_build:
     commands:
       - docker pull katalonstudio/katalon
   build:
     commands:
-      - docker run -t --rm -v "$(pwd)":/katalon/katalon/source katalonstudio/katalon katalon-execute.sh -apiKey="150603ce-c298-47a9-94d7-c4657e43a7b6" -browserType="Chrome" -retry=0 -statusDelay=15 -testSuitePath="Test Suites/Booking flows pass"
+      - docker run -t --rm -v "$(pwd)":/katalon/katalon/source katalonstudio/katalon katalon-execute.sh -apiKey=$KATALON_API_KEY -browserType="Chrome" -retry=0 -statusDelay=15 -testSuitePath="Test Suites/Booking flows pass"
 artifacts:
   files:
     - report/*
