--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,7 +1,7 @@
 version: 0.2
 env:
   secrets_manager:
-   KATALON_API_KEY: AWS::Kami::KATALON_API_KEY
+   KATALON_API_KEY: "Kami"
 phases:
   pre_build:
     commands:
